--- a/TODAY/today.html
+++ b/TODAY/today.html
@@ -10,66 +10,9 @@
     <h1 id="TEXT"> LOCATION <p style="display:inline;" id="location_name"></p> </h1>                                                 <!-- ข้อความ LOCATION -->
         <p id="UNDER_TITLE"> <&#8196;&#8196;&#8196; TODAY &#8196;&#8196;&#8196;> </p>   <!-- ข้อความ < TODAY > -->
         <div class="G_AND_B">
-            <script>
-                window.onload = function () {
-                    CanvasJS.addColorSet("brown",
-                    [//colorSet Array
-                    "#795321",
-                    ]);
-
-
-                var dps = []; // dataPoints
-                var chart = new CanvasJS.Chart("chartContainer", {
-                    // width: 700, height: 350,
-                    colorSet: "brown",
-                    backgroundColor: "#fdfaf2",
-                    title :{
-                        text: "Real-Time Chart",
-                        fontFamily: "Nanum Gothic Coding"
-                    },
-                    data: [{
-                        type: "line",
-                        dataPoints: dps
-                    }]
-                });
-
-                var xVal = 0;
-                var yVal = 100;
-                var updateInterval = 1000;
-                var dataLength = 20; // number of dataPoints visible at any point
-
-                var updateChart = function (count) {
-
-                    count = count || 1;
-
-
-                    // Data to read from in here.
-                    for (var j = 0; j < count; j++) {
-                        yVal = yVal +  Math.round(5 + Math.random() *(-5-5));
-                        dps.push({
-                            x: xVal,
-                            y: yVal
-                        });
-                        xVal++;
-                    }
-
-                    if (dps.length > dataLength) {
-                        dps.shift();
-                    }
-
-                    chart.render();
-                };
-
-                updateChart(dataLength);
-                setInterval(function(){updateChart()}, updateInterval);
-
-                }
-            </script>
+            
             <div id="chartContainer" class="G_AND_B" style="width: 700px; height: 350px;"></div>
             <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
-
-
-
 
 <!--แสดงสีเปลี่ยนตามจำนวน-->
             <div class="B">
@@ -95,18 +38,8 @@
                         <p>&#8196;Overcrowded&#8196;</p>
                     </div>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
-
-
-
-
 
         <div class="BUTTON">                                                            <!-- ปุ่ม SELECT_LOCA , YESTERDAY -->
             <div id="BUTTON_S">                                                         <!-- ปุ่ม SELECT_LOCA -->
@@ -123,9 +56,7 @@
             </div>
         </div>
 
-        <div id="test">
-            <p>here</p>
-        </div>
+        <div id="test"><p>here</p></div>
 
     <script src="today.js"></script>
     </body>
