refactor some part

--- a/TODAY/today.html
+++ b/TODAY/today.html
@@ -77,7 +77,7 @@
                     <p>PEOPLE / 10 m<sup>2</sup></p>
                 </div>
                 <div id="BLOCKS_DENSITY_MIN" class="REAL_TIME_BLOCKS">
-                    <p>PEOPLE / 10 min</p>
+                    <p>PEOPLE</p>
                 </div>
 
 <!--text ขยายความ-->
@@ -95,18 +95,8 @@
                         <p>&#8196;Overcrowded&#8196;</p>
                     </div>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
-
-
-
-
 
         <div class="BUTTON">                                                            <!-- ปุ่ม SELECT_LOCA , YESTERDAY -->
             <div id="BUTTON_S">                                                         <!-- ปุ่ม SELECT_LOCA -->
@@ -121,10 +111,6 @@
                            type="submit" SUBMIT value=" YESTERDAY " />
                 </a>
             </div>
-        </div>
-
-        <div id="test">
-            <p>here</p>
         </div>
 
     <script src="today.js"></script>
