real time blocks

--- a/TODAY/today.html
+++ b/TODAY/today.html
@@ -17,10 +17,10 @@
 <!--แสดงสีเปลี่ยนตามจำนวน-->
             <div class="B">
                 <div id="BLOCKS_DENSITY_M2" class="REAL_TIME_BLOCKS">
-                    <p>PEOPLE / 10 m<sup>2</sup></p>
+                    <p> <p style="display:inline;" id="peopleM2"></p> (PEOPLE / 10 m<sup>2</sup>)</p>
                 </div>
                 <div id="BLOCKS_DENSITY_MIN" class="REAL_TIME_BLOCKS">
-                    <p>PEOPLE / 10 min</p>
+                    <p> <p style="display:inline;" id="peopleMIN"></p> PEOPLE</p>
                 </div>
 
 <!--text ขยายความ-->
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div id="test"><p>here</p></div>
+<!--        <div id="test"><p>here</p></div>-->
 
     <script src="today.js"></script>
     </body>
