แก้ให้เป็นระเบียบจ้าพี่จ๋า

--- a/YESTERDAY/yesterday.html
+++ b/YESTERDAY/yesterday.html
@@ -12,7 +12,7 @@
 
         <!-- ----------------------------------------------------------------------------------------------------------- Pie Chart -->
         <div class="graph">
-            <div id="abc"style="width: 1000px; height: 350px;"></div>
+            <div id="barchart"style="width: 1000px; height: 350px;"></div>
             <div id="piechart" style="width: 700px; height: 450px;"></div>
         </div>
 
