--- a/TODAY/today.html
+++ b/TODAY/today.html
@@ -4,15 +4,22 @@
         <meta charset="UTF-8">
         <title>today</title>
         <link rel="stylesheet" href="today.css">
+        <script type="text/javascript" loading="lazy" src="https://www.gstatic.com/charts/loader.js"></script>
+
     </head>
 
     <body>
     <h1 id="TEXT"> LOCATION <p style="display:inline;" id="location_name"></p> </h1>                                                 <!-- ข้อความ LOCATION -->
         <p id="UNDER_TITLE"> <&#8196;&#8196;&#8196; TODAY &#8196;&#8196;&#8196;> </p>   <!-- ข้อความ < TODAY > -->
+
         <div class="G_AND_B">
+
             
-            <div id="chartContainer" class="G_AND_B" style="width: 700px; height: 350px;"></div>
-            <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+            <div id="chart_div" class="G_AND_B" style="width: 700px; height: 350px;"></div>
+
+
+            <!-- <div id="chartContainer" class="G_AND_B" style="width: 700px; height: 350px;"></div> -->
+            <!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
 
 <!--แสดงสีเปลี่ยนตามจำนวน-->
             <div class="B">
