--- a/YESTERDAY/yesterday.html
+++ b/YESTERDAY/yesterday.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>yesterday</title>
         <link rel="stylesheet" href="yesterday.css">
+        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
     </head>
 
     <body>
@@ -12,7 +14,9 @@
 
         <!-- ----------------------------------------------------------------------------------------------------------- Pie Chart -->
         <div class="graph">
-            <div id="barchart"style="width: 1000px; height: 350px;"></div>
+            <div id="chartContainer" style="height: 370px; width: 700px;"></div>
+
+            <!-- <div id="barchart"style="width: 1000px; height: 350px;"></div> -->
             <div id="piechart" style="width: 700px; height: 450px;"></div>
         </div>
 
