--- a/YESTERDAY/yesterday.html
+++ b/YESTERDAY/yesterday.html
@@ -36,7 +36,9 @@
                 </a>
             </div>
         </div>
-
+        <div id="test-bar">
+            <p>here</p>
+        </div>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="yesterday.js"></script>
     </body>
